--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav class="nav_bar">
       <ul>
         <li>
-          <a  class="nav_ite;">Home</a>
+          <a  class="nav_item;">Home</a>
         </li>
         <li>
           <a  class="nav_item">Comics</a>
@@ -43,13 +43,13 @@
     Ironman,Superman,Batman,Spiderman,Flash and Thor </p>
   <div style="display: flex;">
     <img src="https://upload.wikimedia.org/wikipedia/en/4/47/Iron_Man_%28circa_2018%29.png" alt="ironMan">
-    <p style>Iron man thgreatest and smartest guy i think his the best among heroes dont you agree with me write in the
+    <p style>Iron man the greatest and smartest guy i think his the best among heroes dont you agree with me write in the
       comments you know you need to like fisrt below
     <p>
   </div>
 
   <div style="display: flex; flex-direction: row;">
-    <p>super man strong and weak i hate him i know it sounds dumb but i do</p>
+    <p>super man strong and weak i hate him i know it sounds dumb but i do and wwwwwwwwwwwwwwwwwwwwwwwwwwwwaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaassssssssssssssssssssssssssssssssssss</p>
     <img src="https://www.wallpaperflare.com/static/633/1001/211/superman-dc-comics-dc-wallpaper.jpg" width=250,
       height=400/>
   </div>
@@ -58,7 +58,7 @@
     <p>The amazing spiderman has super senses called "Spider-Sense", which makes him detect dangerous accidents within
       milli-seconds, he is the neighborhood bestfriend</p>
     <img
-      src="https://i.guim.co.uk/img/media/892fa5c71f29ce088247397726f32ca83b8231d0/79_0_3386_2031/master/3386.jpg?width=1200&quality=85&auto=format&fit=max&s=f4abd83f4c0bebb2099b844cc144ccac"
+      src=""
       width=250, height=400/>
   </div>
   </div>
