--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <div style="display: flex; flex-direction: row;">
-    <p>super man strong and weak i hate him i know it sounds dumb but i do and wwwwwwwwwwwwwwwwwwwwwwwwwwwwaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaassssssssssssssssssssssssssssssssssss</p>
+    <p>super man strong and weak i hate him i know it sounds dumb but i do</p>
     <img src="https://www.wallpaperflare.com/static/633/1001/211/superman-dc-comics-dc-wallpaper.jpg" width=250,
       height=400/>
   </div>
